--- a/style.css
+++ b/style.css
@@ -35,10 +35,29 @@ p:first-child {
 	font-weight: 600;
 }
 
+#myguess {
+	margin-top: .2rem;
+}
+
+#hint {
+	position: fixed;
+	text-align: left;
+	bottom: 13%;
+	right: 10%;
+	font-family: "Coming Soon", monospace;
+	font-size: 16px;
+	font-weight: 600;
+	color: rgb(235, 15, 15);
+}
+
 h2.text-center {
 	color: #7a7a7a;
 	padding-bottom: 0.5rem;
 	font-size: 2.25rem;
+}
+
+#start {
+	cursor: pointer;
 }
 
 .invisible-clickarea {
@@ -47,7 +66,6 @@ h2.text-center {
 	top: 0;
 	height: calc(100vh - 60px);
 	width: 100vw;
-	cursor: pointer;
 	z-index: 1;
 }
 
@@ -57,5 +75,5 @@ h2.text-center {
 
 #canvas {
 	position: absolute;
-	height: auto;
+	height: ;
 }
